--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "generate": "stencil generate"
     },
     "dependencies": {
-        "@stencil/core": "^2.0.1"
+        "@stencil/core": "^2.0.1",
+        "node": "14"
     },
     "license": "MIT"
 }
